# signal-to-story

./: .gitignore  README.md  app.py  pyproject.toml
.streamlit/: config.toml
data/: sample_signal.json
docs/: decisions.md
pipeline/: clients.py  factory.py  orchestrator.py  stage1_signal.py  stage2_script.py  stage3_compliance.py  stage4_storyboard.py  stage5_conversion.py  types.py
prompts/: compliance.md  script.md
tests/: conftest.py  test_keyless.py  test_orchestrator.py  test_stage1_signal.py  test_stage2_script.py  test_stage3_compliance.py  test_stage4_storyboard.py  test_stage5_conversion.py
