[project]
name = "signal-to-story"
version = "0.1.0"
description = "증시 시그널 → 숏폼 투자 콘텐츠 자동 생산 파이프라인 데모"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40",
    "openai>=1.50",
    "streamlit>=1.40",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
